# Autonomous-Car

./: .gitignore  Everybodys Job  GeneralNotes  Notes about how to connect with Raspberry Pi 3 with ssh tools  README.md  Software Framework(v1.0).dia  TaskGraph of Autonomouscar.dia  Weekly Notes
FPGA/Autonomous_Car_OS/: .cproject  .project  Autonomous_Car_OS.elf  Autonomous_Car_OS.map  Autonomous_Car_OS.objdump  Makefile  communication.c  communication.h  create-this-app  gps.c  gps.h  main.c  motor.c  motor.h  uart.c  uart.h  ultrasound.c  ultrasound.h
FPGA/Autonomous_Car_OS_bsp/: .cproject  .project  Makefile  alt_sys_init.c  create-this-bsp  linker.h  linker.x  mem_init.mk  memory.gdb  public.mk  settings.bsp  summary.html  system.h
FPGA/Autonomous_Car_OS_bsp/HAL/inc/: includes.h  os_cpu.h
FPGA/Autonomous_Car_OS_bsp/HAL/src/: alt_usleep.c  os_cpu_a.S  os_cpu_c.c
FPGA/Autonomous_Car_OS_bsp/UCOSII/inc/: os_cfg.h  ucos_ii.h
FPGA/Autonomous_Car_OS_bsp/UCOSII/inc/os/: alt_flag.h  alt_hooks.h  alt_sem.h
FPGA/Autonomous_Car_OS_bsp/UCOSII/inc/priv/: alt_flag_ucosii.h  (+1 more)
FPGA/Autonomous_Car_OS_bsp/UCOSII/src/: alt_env_lock.c  alt_malloc_lock.c  os_core.c  os_dbg.c  os_flag.c  os_mbox.c  os_mem.c  os_mutex.c  os_q.c  os_sem.c  os_task.c  os_time.c  os_tmr.c
FPGA/Autonomous_Car_OS_bsp/drivers/inc/: altera_avalon_epcs_flash_controller.h  altera_avalon_performance_counter.h  epcs_commands.h
FPGA/Autonomous_Car_OS_bsp/drivers/src/: altera_avalon_epcs_flash_controller.c  altera_avalon_performance_counter.c  epcs_commands.c  perf_print_formatted_report.c
FPGA/board_images/: NIOSCar.qsf  NIOSCar.sof  NIOS_Sys.sopcinfo
PC/: ClientPC.pb  ShowSerialPort.pb  TestTentacles.pb
PC/Trafficlights/: TrafficLight.pb  TrafficLights
iMX6/: wifi.sh
iMX6/opencv/Demonstration/: CMakeLists.txt  capture_Rasp.cpp  capture_i.MX6.cpp  client  client.cpp  client.h  communication.cpp  communication.h  server.cpp  uart.cpp
iMX6/opencv/Stereovision/: CMakeLists.txt  CollisionAvoidance.cpp  CollisionAvoidance.hpp  FindWiringPi.cmake  README.txt  build.sh  build_Xcode.sh  linux install commands  raspy stuff
iMX6/opencv/Stereovision/calibration/: extrinsics.yml  intrinsics.yml
iMX6/opencv/Stereovision/calibration_oldcams/: intrinsics.yml
iMX6/opencv/Stereovision/calibrationbak/: extrinsics.yml
iMX6/opencv/Stereovision/documentation/: Presentation.odp  Presentation_video.avi
iMX6/opencv/Stereovision/documentation/Simon's Stuff/: Midterm Präsi Simon.pptx
iMX6/opencv/Stereovision/inc/: DriveLogicMock.hpp  StereoVision.hpp  StereovisionCallback.hpp  Tentacles.hpp  cameracalibrator.hpp  com.hpp  depthsubstraction.hpp  main.hpp  matchingmethod.hpp
iMX6/opencv/Stereovision/inc/Interfaces/: ICollisionAvoidanceDelegate.hpp  IStereovisionCallback.hpp  IStereovisionDelegate.hpp
iMX6/opencv/Stereovision/inc/methods/: bmmethod.hpp  sgbmmethod.hpp
iMX6/opencv/Stereovision/src/: CollisionAvoidance.cpp  DriveLogicMock.cpp  StereoVision.cpp  StereovisionCallback.cpp  Tentacles.cpp  cameracalibrator.cpp  com.cpp  depthsubstraction.cpp  main.cpp  matchingmethod.cpp
iMX6/opencv/Stereovision/src/methods/: bmmethod.cpp  sgbmmethod.cpp
iMX6/opencv/Tentacles/: CMakeLists.txt  Tentacles.cpp  Tentacles.hpp
iMX6/opencv/calibration/: CMakeLists.txt  default.xml
iMX6/opencv/capture/: CMakeLists.txt  capture.cpp  howTo_ConvertImagesToVideo.txt
iMX6/opencv/depth_map/: camconstants.py
iMX6/opencv/firsttest/: CMakeLists.txt  capture.cpp
iMX6/opencv/homography/: CMakeLists.txt  Homography.xml  main.cpp  out_camera_data.xml
iMX6/opencv/learning/: cameratiming.py  hsv_test.py  showcamera.py
iMX6/opencv/learning/ramdrive/: Readme.txt
iMX6/opencv/line_detection/line_detection/: 0802.pgm  CMakeCache.txt  CMakeLists.txt  CMakeSharedHeaders.txt  Makefile  cmake_install.cmake  line_detection  line_detection.cpp  main.cpp
iMX6/opencv/secondtest/: CMakeLists.txt  capture_Rasp.cpp  client.cpp  server.cpp  uart.cpp  uart.h
iMX6/opencv/signDetection/: colors.cpp  colors.hpp  colors2.cpp  colors2.hpp
iMX6/opencv/signDetection/tesseract/: colors.cpp  colors.hpp
iMX6/opencv/trafficlights/: CMakeLists.txt  Client.cpp  TrafficLights old.cpp  TrafficLights.cpp
iMX6/opencv/videoinput/: CMakeLists.txt  Signs.cpp  Signs.hpp  TrafficLights.cpp  TrafficLights.hpp  line_detection.cpp  line_detection.h  opencv_utils.h  stereovidparse.cpp  stereovidparse.hpp
iMX6/serialtest/: SerialServer.py  serialtest.py  test.c
(+4 files in other folders)
