cmake_minimum_required(VERSION 2.8)
project( StereoVidParse )
find_package( OpenCV REQUIRED )
add_definitions(-std=c++11)
add_executable( StereoVidParse stereovidparse.cpp Signs.cpp TrafficLights.cpp line_detection.cpp)
target_link_libraries( StereoVidParse ${OpenCV_LIBS} )
set(CMAKE_BUILD_TYPE Release)
